# CortexMap

./: .env  HANDOVER_DOC.md  LICENSE  README.md  README_zh.md  WORK_PLAN.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/db/: cortex_map.db
src-tauri/icons/: icon.icns
src-tauri/src/: db.rs  lib.rs  models.rs  server.rs
src/api/: client.ts  ollama.ts
src/components/: TimeTravelSlider.tsx
src/components/edges/: MindMapEdge.tsx
src/components/nodes/: CortexNode.tsx
src/components/ui/: CortexLogo.tsx  NodeInspector.tsx
src/utils/: aiContext.ts
